--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -84,8 +84,16 @@
 
 
     i {
-        vertical-align: middle;
         line-height: inherit;
+    }
+
+    .fa {
+        width: 1rem;
+    }
+
+    .fa-lg {
+        font-size: inherit;
+        vertical-align: inherit;
     }
 
     input, textarea {
